<?xml version="1.0"?>
<package>
  <name>RSD</name>
  <version>0.9.1</version>
  <description>
    This package connects roslibpy to ur robot using caros_ur modules
  </description>
  <maintainer email="kagro15@student.sdu.dk">kasper</maintainer>
  <license>Beerware</license>
  <author>Kasper</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msg</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>

